--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+     <!-- 결제관련추가 -->
+     <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
